incluido linguagem pt-br e en mais banco json

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "15.3.2",
     "next-auth": "^5.0.0-beta.29",
     "react": "^19.0.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "sonner": "^2.0.7",
